--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.93.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
