refactor(core): complete rebrand transition to LibertadVNZL

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "M&T Venezuela Noticias",
-  "short_name": "M&T Venezuela",
+  "name": "LibertadVNZL Noticias",
+  "short_name": "LibertadVNZL",
   "description": "Periodismo independiente sobre Venezuela. Noticias verificadas y cobertura continua.",
   "start_url": "/",
   "display": "standalone",
